Solución de 2019/1/MAT1610/1

--- a/2019/1/MAT1610/1/solucion.tex
+++ b/2019/1/MAT1610/1/solucion.tex
@@ -155,7 +155,7 @@ $$\lim\limits_{u \ra 1} \dfrac{u-1}{1-u^2}
 = \lim\limits_{u \ra 1} \dfrac{-(1-u)}{(1+u)(1-u)}
 = \lim\limits_{u \ra 1} \dfrac{-1}{(1+u)}
 = -\dfrac{1}{2}$$
-\item $\lim\limits_{x \ra 3} \dfrac{\sqrt[]{4-x}-1}{x-3}$\\
+\item $\lim\limits_{x \ra 2} \dfrac{\sqrt[]{6-x}-2}{\sqrt[]{3-x}-1}$\\
 \\
 En este caso podríamos utilizar sustitución como antes, pero dado que hay dos raices distintas, sería complicado. Por lo tanto, usaremos la técnica de la racionalización, esto es
 $$\lim\limits_{x \ra 2} \dfrac{\sqrt[]{6-x}-2}{\sqrt[]{3-x}-1}
