Solución de 2019/1/MAT1610/2

--- a/2019/1/MAT1610/2/solucion.tex
+++ b/2019/1/MAT1610/2/solucion.tex
@@ -133,8 +133,8 @@ Por lo general, para resolver límites que involucran funciones trigonométricas
 \item $\lim\limits_{x \ra 0} \dfrac{\tan x}{\sin 4x} =
 \lim\limits_{x \ra 0} \dfrac{\sin x}{\cos x} \cdot \dfrac{1}{\sin 4x} =
 \lim\limits_{x \ra 0} \dfrac{\sin x}{\cos x} \cdot \dfrac{1}{\sin 4x} \cdot \dfrac{4x}{4x}  =
-\lim\limits_{x \ra 0} \dfrac{\sin x}{x} \cdot \dfrac{4x}{\sin 4x} \cdot \dfrac{4}{\cos x} $ \\
-$=\lim\limits_{x \ra 0} \dfrac{4}{\cos x} = 4$
+\lim\limits_{x \ra 0} \dfrac{\sin x}{x} \cdot \dfrac{4x}{\sin 4x} \cdot \dfrac{1}{4\cos x} $ \\
+$=\lim\limits_{x \ra 0} \dfrac{1}{4\cos x} = \dfrac{1}{4}$
 \item $\lim\limits_{x \ra 0} \dfrac{1 - \sqrt[]{\cos x}}{x^2} =
 \lim\limits_{x \ra 0} \dfrac{1 - \sqrt[]{\cos x}}{x^2} \cdot \dfrac{1 + \sqrt[]{\cos x}}{1 + \sqrt[]{\cos x}} =
 \lim\limits_{x \ra 0} \dfrac{1 - \cos x}{x^2} \cdot \dfrac{1}{1 + \sqrt[]{\cos x}} = \dfrac{1}{4}$ 
@@ -147,7 +147,7 @@ $$\lim\limits_{x \ra \frac{\pi}{2}} \left(\dfrac{\pi}{2} - x \right) \tan x =
 0$$
 \item $\lim\limits_{x \ra \pi} \dfrac{(x - \pi)^2}{\sin ^2 x}$ \\
 \\
-De manera análoga, usaremos el cambio de variable $u = \pi - x$, con lo que
+De manera análoga, usaremos el cambio de variable $u = x - \pi $, con lo que
 $$\lim\limits_{x \ra \pi} \dfrac{(x - \pi)^2}{\sin ^2 x} = 
 \lim\limits_{u \ra 0} \dfrac{u^2}{(\sin (\pi + u))^2} = 
 \lim\limits_{u \ra 0} \dfrac{u^2}{(-\sin u)^2} =  
