Solución de 2019/1/MAT1610/2

--- a/2019/1/MAT1610/2/solucion.tex
+++ b/2019/1/MAT1610/2/solucion.tex
@@ -143,8 +143,9 @@ $=\lim\limits_{x \ra 0} \dfrac{1}{4\cos x} = \dfrac{1}{4}$
 En este caso utilizaremos el cambio de variable $u = \dfrac{\pi}{2} - x$, con lo que
 $$\lim\limits_{x \ra \frac{\pi}{2}} \left(\dfrac{\pi}{2} - x \right) \tan x =
 \lim\limits_{u \ra 0} u \tan \left(\dfrac{\pi}{2} - u \right) =
-\lim\limits_{u \ra 0} u \tan u =
-0$$
+\lim\limits_{u \ra 0} u \cot u =
+\lim\limits_{u \ra 0} \dfrac{u}{\sin u} \cos u =
+1$$
 \item $\lim\limits_{x \ra \pi} \dfrac{(x - \pi)^2}{\sin ^2 x}$ \\
 \\
 De manera análoga, usaremos el cambio de variable $u = x - \pi $, con lo que
