Enunciado de 2019/1/MAT1610/3

--- a/2019/1/MAT1610/3/enunciado.tex
+++ b/2019/1/MAT1610/3/enunciado.tex
@@ -108,5 +108,6 @@
 \end{center}
 
 \begin{preguntas}
+\item Encuentra la función $g(x)$ que es tangente a la función $f(x) = x^2 + 1$ en el punto $x = 3$.
 \end{preguntas}
 \end{document}
