--- a/2019/1/MAT1610/3/solucion.tex
+++ b/2019/1/MAT1610/3/solucion.tex
@@ -108,5 +108,9 @@
 \end{center}
 
 \begin{preguntas}
+\item Encuentra la función $g(x)$ que es tangente a la función $f(x) = x^2 + 1$ en el punto $x = 3$.
+\begin{solucion}
+
+\end{solucion}
 \end{preguntas}
 \end{document}
