--- a/2019/1/MAT1610/3/enunciado.tex
+++ b/2019/1/MAT1610/3/enunciado.tex
@@ -109,5 +109,12 @@
 
 \begin{preguntas}
 \item Encuentra la función $g(x)$ que es tangente a la función $f(x) = x^2 + 1$ en el punto $x = 3$.
+\item Calcular la derivada por definición de las siguientes funciones
+\begin{tasks}(2)
+\task $f(x) = x+5$
+\task $f(x) = 2x^2-3$
+\task $f(x) = e^x$
+\task $f(x) = x^n$
+\end{tasks}
 \end{preguntas}
 \end{document}
