Solución de 2019/1/MAT1610/3

--- a/2019/1/MAT1610/3/solucion.tex
+++ b/2019/1/MAT1610/3/solucion.tex
@@ -112,5 +112,21 @@
 \begin{solucion}
 
 \end{solucion}
+\item Calcular la derivada por definición de las siguientes funciones
+\begin{tasks}(2)
+\task $f(x) = x+5$
+\task $f(x) = 2x^2-3$
+\task $f(x) = e^x$
+\task $f(x) = x^n$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item 
+\item 
+\item 
+\item 
+\end{enumerate}
+\end{solucion}
 \end{preguntas}
 \end{document}
