Enunciado de 2019/1/MAT1610/3

--- a/2019/1/MAT1610/3/enunciado.tex
+++ b/2019/1/MAT1610/3/enunciado.tex
@@ -116,5 +116,6 @@
 \task $f(x) = e^x$
 \task $f(x) = x^n$
 \end{tasks}
+\item Demuestra que la función $f(x) = e^{-x} + ln(x)$ posee al menos una solución.
 \end{preguntas}
 \end{document}
