Solución de 2019/1/MAT1610/3

--- a/2019/1/MAT1610/3/solucion.tex
+++ b/2019/1/MAT1610/3/solucion.tex
@@ -128,5 +128,9 @@
 \item 
 \end{enumerate}
 \end{solucion}
+\item Demuestra que la función $f(x) = e^{-x} + ln(x)$ posee al menos una solución.
+\begin{solucion}
+
+\end{solucion}
 \end{preguntas}
 \end{document}
