Enunciado de 2019/1/MAT1610/3

--- a/2019/1/MAT1610/3/enunciado.tex
+++ b/2019/1/MAT1610/3/enunciado.tex
@@ -117,5 +117,8 @@
 \task $f(x) = x^n$
 \end{tasks}
 \item Demuestra que la función $f(x) = e^{-x} + ln(x)$ posee al menos una solución.
+\item Sea $f:[a,b] \ra \R$ una función derivable en $(a,b)$ y sea $x_0 \in (a,b)$ fijo, se define
+$$ g(h) = \dfrac{f(x_0 + h) - f(x_0-h)}{2h}$$
+Calcular $\lim\limits_{h \ra 0} g(h)$
 \end{preguntas}
 \end{document}
