Solución de 2019/1/MAT1610/3

--- a/2019/1/MAT1610/3/solucion.tex
+++ b/2019/1/MAT1610/3/solucion.tex
@@ -132,5 +132,11 @@
 \begin{solucion}
 
 \end{solucion}
+\item Sea $f:[a,b] \ra \R$ una función derivable en $(a,b)$ y sea $x_0 \in (a,b)$ fijo, se define
+$$ g(h) = \dfrac{f(x_0 + h) - f(x_0-h)}{2h}$$
+Calcular $\lim\limits_{h \ra 0} g(h)$
+\begin{solucion}
+
+\end{solucion}
 \end{preguntas}
 \end{document}
