Enunciado de 2019/1/MAT1610/3

--- a/2019/1/MAT1610/3/enunciado.tex
+++ b/2019/1/MAT1610/3/enunciado.tex
@@ -51,7 +51,7 @@
 }
 
 \newcommand{\ayudantia}{{\sc Ayudantía 3}}
-\newcommand{\tituloayu}{Derivadas}
+\newcommand{\tituloayu}{Asíntotas y derivadas}
 \newcommand{\fecha}{26 de marzo de 2019}
 \newcommand{\sigla}{MAT1610}
 \newcommand{\nombre}{Cálculo I}
@@ -108,6 +108,11 @@
 \end{center}
 
 \begin{preguntas}
+\item Determine las asíntotas horizontales, verticales y oblicuas de las siguientes funciones, en caso de que existan
+\begin{tasks}(2)
+\task $f(x) = \dfrac{9-x^2}{x+2}$
+\task $f(x) = \dfrac{x^2-5x+6}{x^2+2x-8}$
+\end{tasks}
 \item Encuentra la función $g(x)$ que es tangente a la función $f(x) = x^2 + 1$ en el punto $x = 3$.
 \item Calcular la derivada por definición de las siguientes funciones
 \begin{tasks}(2)
