--- a/2019/1/MAT1610/3/enunciado.tex
+++ b/2019/1/MAT1610/3/enunciado.tex
@@ -125,5 +125,14 @@
 \item Sea $f:[a,b] \ra \R$ una función derivable en $(a,b)$ y sea $x_0 \in (a,b)$ fijo, se define
 $$ g(h) = \dfrac{f(x_0 + h) - f(x_0-h)}{2h}$$
 Calcular $\lim\limits_{h \ra 0} g(h)$
+\item Dada la función
+$$f(x) = \begin{cases}
+\dfrac{x-p}{x+1} & x > 0\\
+x^2+qx & x \leq 0
+\end{cases}$$
+Determine los valores de $p$ y $q$ de manera que $f$ sea derivable en $x=0$
+\begin{enumerate}[a)]
+\item 
+\end{enumerate}
 \end{preguntas}
 \end{document}
