Solución de 2019/1/MAT1610/3

--- a/2019/1/MAT1610/3/solucion.tex
+++ b/2019/1/MAT1610/3/solucion.tex
@@ -150,5 +150,20 @@ Calcular $\lim\limits_{h \ra 0} g(h)$
 \begin{solucion}
 
 \end{solucion}
+\item Dada la función
+$$f(x) = \begin{cases}
+\dfrac{x-p}{x+1} & x > 0\\
+x^2+qx & x \leq 0
+\end{cases}$$
+Determine los valores de $p$ y $q$ de manera que $f$ sea derivable en $x=0$
+\begin{enumerate}[a)]
+\item 
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item 
+\end{enumerate}
+\end{solucion}
 \end{preguntas}
 \end{document}
