Enunciado de 2019/1/MAT1610/3

--- a/2019/1/MAT1610/3/enunciado.tex
+++ b/2019/1/MAT1610/3/enunciado.tex
@@ -108,12 +108,12 @@
 \end{center}
 
 \begin{preguntas}
+\item Demuestra que la función $f(x) = e^{-x} + ln(x)$ posee al menos una solución.
 \item Determine las asíntotas horizontales, verticales y oblicuas de las siguientes funciones, en caso de que existan
 \begin{tasks}(2)
 \task $f(x) = \dfrac{9-x^2}{x+2}$
 \task $f(x) = \dfrac{x^2-5x+6}{x^2+2x-8}$
 \end{tasks}
-\item Demuestra que la función $f(x) = e^{-x} + ln(x)$ posee al menos una solución.
 \item Encuentra la función $g(x)$ que es tangente a la función $f(x) = x^2 + 1$ en el punto $x = 3$.
 \item Calcular la derivada por definición de las siguientes funciones
 \begin{tasks}(2)
@@ -127,9 +127,9 @@ $$ g(h) = \dfrac{f(x_0 + h) - f(x_0-h)}{2h}$$
 Calcular $\lim\limits_{h \ra 0} g(h)$
 \item Dada la función
 $$f(x) = \begin{cases}
-\dfrac{x-p}{x+1} & x > 0\\
-x^2+qx & x \leq 0
+\dfrac{1-x}{1-\sqrt[]{x}} & x > 1\\
+\alpha x + \beta & x \leq 1
 \end{cases}$$
-Determine los valores de $p$ y $q$ de manera que $f$ sea derivable en $x=0$
+Determine los valores de $\alpha$ y $\beta$ de manera que $f$ sea derivable en $x=1$
 \end{preguntas}
 \end{document}
