--- a/2019/1/MAT1610/3/solucion.tex
+++ b/2019/1/MAT1610/3/solucion.tex
@@ -108,6 +108,10 @@
 \end{center}
 
 \begin{preguntas}
+\item Demuestra que la función $f(x) = e^{-x} + ln(x)$ posee al menos una solución.
+\begin{solucion}
+
+\end{solucion}
 \item Determine las asíntotas horizontales, verticales y oblicuas de las siguientes funciones, en caso de que existan
 \begin{tasks}(2)
 \task $f(x) = \dfrac{9-x^2}{x+2}$
@@ -119,10 +123,6 @@
 \item 
 \item 
 \end{enumerate}
-\end{solucion}
-\item Demuestra que la función $f(x) = e^{-x} + ln(x)$ posee al menos una solución.
-\begin{solucion}
-
 \end{solucion}
 \item Encuentra la función $g(x)$ que es tangente a la función $f(x) = x^2 + 1$ en el punto $x = 3$.
 \begin{solucion}
@@ -152,10 +152,10 @@ Calcular $\lim\limits_{h \ra 0} g(h)$
 \end{solucion}
 \item Dada la función
 $$f(x) = \begin{cases}
-\dfrac{x-p}{x+1} & x > 0\\
-x^2+qx & x \leq 0
+\dfrac{1-x}{1-\sqrt[]{x}} & x > 1\\
+\alpha x + \beta & x \leq 1
 \end{cases}$$
-Determine los valores de $p$ y $q$ de manera que $f$ sea derivable en $x=0$
+Determine los valores de $\alpha$ y $\beta$ de manera que $f$ sea derivable en $x=1$
 \begin{solucion}
 
 \end{solucion}
