--- a/2019/1/MAT1610/3/solucion.tex
+++ b/2019/1/MAT1610/3/solucion.tex
@@ -110,7 +110,11 @@
 \begin{preguntas}
 \item Demuestra que la función $f(x) = e^{-x} + ln(x)$ posee al menos una solución.
 \begin{solucion}
-
+Evaluemos la función en puntos que podamos identificar claramente el signo.\\
+\\
+$$f(1) = e^{-1} + ln(1) = \dfrac{1}{e} > 0$$
+$$f(0.001) = e^{-0.001} + ln(0.001) < 0$$
+Luego, por Teorema del Valor Intermedio, como $f(x)$ es un función continua en $[0.001, 1]$ y sabemos que $f(0.001) < 0$ y $f(1) > 0$, $\exists c \in [0.001, 1]$ tal que $f(c) = 0$, por lo que la función tiene al menos una solución.
 \end{solucion}
 \item Determine las asíntotas horizontales, verticales y oblicuas de las siguientes funciones, en caso de que existan
 \begin{tasks}(2)
@@ -126,7 +130,21 @@
 \end{solucion}
 \item Encuentra la función $g(x)$ que es tangente a la función $f(x) = x^2 + 1$ en el punto $x = 3$.
 \begin{solucion}
-
+En primer lugar, debemos obtener la derivada (pendiente) de la función $f(x)$ en el punto $x=3$. Esto es
+$$\lim\limits_{h\ra h} \dfrac{f(3+h) - f(3)}{h} =
+\lim\limits_{h\ra h} \dfrac{(3+h)^2+1 - 10}{h} =
+\lim\limits_{h\ra h} \dfrac{9+6h+h^2+1 - 10}{h}$$
+$$=
+\lim\limits_{h\ra h} \dfrac{6h+h^2}{h} =
+\lim\limits_{h\ra h} \dfrac{h(6+h)}{h} = 
+6
+$$
+Luego, la pendiente en $x=3$ es $6$. Por lo tanto, la función que buscamos será de la forma
+$$g(x) = 6x + n$$
+Además, sabemos que $g(3) = f(3)$, por lo que evaluando,
+$$f(3) = g(3) \ra 10 = 18 + n \ra n = -8$$
+Finalmente,
+$$g(x) = 6x - 8$$
 \end{solucion}
 \item Calcular la derivada por definición de las siguientes funciones
 \begin{tasks}(2)
@@ -144,7 +162,18 @@
 $$ g(h) = \dfrac{f(x_0 + h) - f(x_0-h)}{2h}$$
 Calcular $\lim\limits_{h \ra 0} g(h)$
 \begin{solucion}
-
+El límite a calcular es
+$$ \lim\limits_{h \ra 0} \dfrac{f(x_0 + h) - f(x_0-h)}{2h}$$
+Es evidente que esto se parece a la definición del límite, sin embargo faltan algunos terminos para completarlo.\\
+Vamos a restar y sumar el termino $f(x_0)$ al numerador, con lo que obtenemos
+$$= \lim\limits_{h \ra 0} \dfrac{f(x_0 + h) - f(x_0) + f(x_0) - f(x_0-h)}{2h}$$
+$$= \lim\limits_{h \ra 0} \dfrac{f(x_0 + h) - f(x_0)}{2h} + \lim\limits_{h \ra 0} \dfrac{f(x_0) - f(x_0-h)}{2h}$$
+$$= \dfrac{1}{2}\lim\limits_{h \ra 0} \dfrac{f(x_0 + h) - f(x_0)}{h} + \dfrac{1}{2}\lim\limits_{h \ra 0} \dfrac{f(x_0-h) - f(x_0)}{-h}$$
+Es evidente que el lado izquierdo es la definición de límite en el punto $x=x_0$. Sin embargo, en el lado izquierdo, debemos realizar el cambio de variable $u = -x$. Luego,
+$$= \dfrac{1}{2}f'(x_0) + \dfrac{1}{2}\lim\limits_{u \ra 0} \dfrac{f(x_0+u) - f(x_0)}{u}$$
+$$= \dfrac{1}{2}f'(x_0) + \dfrac{1}{2}f'(x_0)$$
+Finalmente,
+$$\lim\limits_{h \ra 0} g(h) = f'(x_0)$$
 \end{solucion}
 \item Dada la función
 $$f(x) = \begin{cases}
@@ -153,7 +182,40 @@ $$f(x) = \begin{cases}
 \end{cases}$$
 Determine los valores de $\alpha$ y $\beta$ de manera que $f$ sea derivable en $x=1$
 \begin{solucion}
-
+Observemos que para que $f$ sea derivable en $x=1$, $f$ debe ser continua en $x=1$, por lo que se debe cumplir
+$$\lim\limits_{x\ra 1}f(x) = f(1) = \alpha  + \beta$$
+Para esto, debemos igualar también los límites laterales.
+$$\lim\limits_{x\ra 1-} \alpha x + \beta = \lim\limits_{x\ra 1+} \dfrac{1-x}{1-\sqrt[]{x}} $$
+$$\alpha + \beta = \lim\limits_{x\ra 1+} \dfrac{1-x}{1-\sqrt[]{x}} \cdot \dfrac{1+\sqrt[]{x}}{1+\sqrt[]{x}} $$
+$$\alpha + \beta = \lim\limits_{x\ra 1+} \dfrac{(1-x)(1+\sqrt[]{x})}{1-x}$$
+$$\alpha + \beta = \lim\limits_{x\ra 1+} 1+\sqrt[]{x}$$
+$$\alpha + \beta = 2$$
+Juntando todo, nuestra primera condición es
+$$\alpha + \beta = 2$$
+Notemos que $f(1) = \alpha + \beta = 2$\\
+\\
+La otra condición para que sea derivable, es que exista derivada en $x=1$, es decir, debe existir
+$$\lim\limits_{h\ra 0} \dfrac{f(1+h) - f(1)}{h}$$
+Observe que
+\small$$\lim\limits_{h\ra 0+} \dfrac{f(1+h) - f(1)}{h} = 
+\lim\limits_{h\ra 0+} \dfrac{\frac{1-(1+h)}{1-\sqrt[]{1+h}}- 2}{h} = 
+\lim\limits_{h\ra 0+} \dfrac{\frac{-h(1+\sqrt[]{1+h})}{1-(1+h)}- 2}{h} = 
+\lim\limits_{h\ra 0+} \dfrac{\frac{-h(1+\sqrt[]{1-h})}{-h}- 2}{h}  $$
+$$= 
+\lim\limits_{h\ra 0+} \dfrac{\sqrt[]{1-h} - 1}{h} = 
+\lim\limits_{h\ra 0+} \dfrac{1-h - 1}{h} = 
+\lim\limits_{h\ra 0+} \dfrac{-h}{h} =
+-1$$
+Por otra parte
+$$\lim\limits_{h\ra 0-} \dfrac{f(1+h) - f(1)}{h} = 
+\lim\limits_{h\ra 0-} \dfrac{\alpha(1+h) +\beta - \alpha - \beta}{h} = 
+\lim\limits_{h\ra 0-} \dfrac{\alpha h }{h} =
+\alpha
+$$
+Luego se debe cumplir que
+$$\alpha = -1$$
+Con esto, concluimos que
+$$\alpha = -1, \qquad \beta = 3$$
 \end{solucion}
 \end{preguntas}
 \end{document}
