--- a/2019/1/MAT1610/3/solucion.tex
+++ b/2019/1/MAT1610/3/solucion.tex
@@ -223,9 +223,9 @@ Observe que
 \lim\limits_{h\ra 0+} \dfrac{\frac{-h(1+\sqrt[]{1-h})}{-h}- 2}{h}  $$
 $$= 
 \lim\limits_{h\ra 0+} \dfrac{\sqrt[]{1-h} - 1}{h} = 
-\lim\limits_{h\ra 0+} \dfrac{1-h - 1}{h} = 
-\lim\limits_{h\ra 0+} \dfrac{-h}{h} =
--1$$
+\lim\limits_{h\ra 0+} \dfrac{1-h - 1}{h(1+\sqrt[]{1-h})} = 
+\lim\limits_{h\ra 0+} \dfrac{-h}{h(1+\sqrt[]{1-h})} =
+\dfrac{1}{2}$$
 Por otra parte
 $$\lim\limits_{h\ra 0-} \dfrac{f(1+h) - f(1)}{h} = 
 \lim\limits_{h\ra 0-} \dfrac{\alpha(1+h) +\beta - \alpha - \beta}{h} = 
@@ -233,9 +233,9 @@ $$\lim\limits_{h\ra 0-} \dfrac{f(1+h) - f(1)}{h} =
 \alpha
 $$
 Luego se debe cumplir que
-$$\alpha = -1$$
+$$\alpha = \dfrac{1}{2}$$
 Con esto, concluimos que
-$$\alpha = -1, \qquad \beta = 3$$
+$$\alpha = \dfrac{1}{2}, \qquad \beta = \dfrac{3}{2}$$
 \end{solucion}
 \end{preguntas}
 \end{document}
