Enunciado de 2018/1/MAT1203/4

--- a/2018/1/MAT1203/4/enunciado.tex
+++ b/2018/1/MAT1203/4/enunciado.tex
@@ -108,5 +108,16 @@
 \end{center}
 
 \begin{preguntas}
+\item Sea $T$ una transformación lineal tal que
+	$$T\begin{bmatrix}2 \\ 1\end{bmatrix} = \begin{bmatrix}1 \\ 0 \\ 1 \\ 0\end{bmatrix} 
+	\quad y \quad
+	T \begin{bmatrix}3 \\ 1\end{bmatrix}  =\begin{bmatrix}0 \\ 1 \\ 0 \\ 1\end{bmatrix}$$
+	Determine la matriz que representa a $T$
+\item Sea la transformación lineal $T$, dada por la matriz
+	$$T = \begin{bmatrix}
+	1 & 2 & -1\\
+	2 & 4 & -2
+	\end{bmatrix}$$
+	Determine la imagen del plano de ecuación $x_1 + x_3 = 1$ por T.
 \end{preguntas}
 \end{document}
