--- a/2018/1/MAT1203/4/solucion.tex
+++ b/2018/1/MAT1203/4/solucion.tex
@@ -108,5 +108,172 @@
 \end{center}
 
 \begin{preguntas}
+\item Sea $T$ una transformación lineal tal que
+	$$T\begin{bmatrix}2 \\ 1\end{bmatrix} = \begin{bmatrix}1 \\ 0 \\ 1 \\ 0\end{bmatrix} 
+	\quad y \quad
+	T \begin{bmatrix}3 \\ 1\end{bmatrix}  =\begin{bmatrix}0 \\ 1 \\ 0 \\ 1\end{bmatrix}$$
+	Determine la matriz que representa a $T$
+\begin{solucion}
+Estamos buscando la matriz $\begin{bmatrix}
+		T\begin{bmatrix}
+		1 \\ 0
+		\end{bmatrix}
+		&
+		
+		T\begin{bmatrix}
+		0 \\ 1
+		\end{bmatrix}
+		\end{bmatrix}$.\\
+		Entonces, lo que necesitamos es buscar $T\begin{bmatrix}
+		1 \\ 0
+		\end{bmatrix}$ y $T\begin{bmatrix}
+			0 \\ 1
+		\end{bmatrix}$ y para ello, debemos escribir cada uno como una combinación lineal de $T\begin{bmatrix}
+		2 \\ 1
+		\end{bmatrix}$ y $T\begin{bmatrix}
+		3 \\ 1
+		\end{bmatrix}$, es decir
+		$$\begin{bmatrix}
+		1 \\ 0
+		\end{bmatrix} = \alpha \begin{bmatrix}
+		2 \\ 1
+		\end{bmatrix} +  \beta \begin{bmatrix}
+		3 \\ 1
+		\end{bmatrix} \quad y \quad
+		\begin{bmatrix}
+		0 \\ 1
+		\end{bmatrix} = \gamma \begin{bmatrix}
+		2 \\ 1
+		\end{bmatrix} +  \delta \begin{bmatrix}
+		3 \\ 1
+		\end{bmatrix}$$
+		O sea, debemos resolver los sistemas
+		$$\begin{array}{rcl}
+		2\alpha + 3\beta & = & 1\\
+		\alpha + \beta & = & 0
+		\end{array} \qquad \qquad \qquad
+		\begin{array}{rcl}
+		2\gamma + 3\delta & = & 0\\
+		\gamma + \delta & = & 1
+		\end{array}$$
+		La solución de estos sistemas es
+		$$\alpha = -1, \quad \beta = 1, \quad \gamma = 3, \quad \delta = -2$$
+		Por lo que
+		$$\begin{bmatrix}
+		1 \\ 0
+		\end{bmatrix} = \begin{bmatrix}
+		3 \\ 1
+		\end{bmatrix}- \begin{bmatrix}
+		2 \\ 1
+		\end{bmatrix}  \quad y \quad
+		\begin{bmatrix}
+		0 \\ 1
+		\end{bmatrix} = 3 \begin{bmatrix}
+		2 \\ 1
+		\end{bmatrix} - 2 \begin{bmatrix}
+		3 \\ 1
+		\end{bmatrix}$$
+		Luego,
+		$$T\begin{bmatrix}
+		1 \\ 0
+		\end{bmatrix} = T\begin{bmatrix}
+		3 \\ 1
+		\end{bmatrix}- T\begin{bmatrix}
+		2 \\ 1
+		\end{bmatrix} = \begin{bmatrix}0 \\ 1 \\ 0 \\ 1\end{bmatrix} - \begin{bmatrix}1 \\0 \\ 1 \\ 0\end{bmatrix} = \begin{bmatrix}-1 \\ 1 \\ -1 \\ 1\end{bmatrix}$$
+		y
+		$$T\begin{bmatrix}
+		0 \\ 1
+		\end{bmatrix} = 3 T\begin{bmatrix}
+		2 \\ 1
+		\end{bmatrix} - 2 T\begin{bmatrix}
+		3 \\ 1
+		\end{bmatrix} = 3 \begin{bmatrix}1 \\ 0 \\ 1 \\ 0\end{bmatrix} - 2 \begin{bmatrix}0 \\ 1 \\ 0 \\ 1\end{bmatrix} = \begin{bmatrix}3 \\ -2 \\ 3 \\ -2\end{bmatrix}$$
+		Finalmente, la matriz que representa $T$ es
+		$$\begin{bmatrix}
+		T\begin{bmatrix}
+		1 \\ 0
+		\end{bmatrix}
+		&
+		
+		T\begin{bmatrix}
+		0 \\ 1
+		\end{bmatrix}
+		\end{bmatrix} =
+		\begin{bmatrix}
+		-1 & 3 \\
+		1 & -2 \\
+		-1 & 3 \\
+		1 & -2
+		\end{bmatrix}$$
+\end{solucion}
+\item Sea la transformación lineal $T$, dada por la matriz
+	$$T = \begin{bmatrix}
+	1 & 2 & -1\\
+	2 & 4 & -2
+	\end{bmatrix}$$
+	Determine la imagen del plano de ecuación $x_1 + x_3 = 1$ por T.
+\begin{solucion}
+En primer lugar, escribimos el plano en su forma paramétrica
+		$$\begin{array}{rcl}
+		x_1 & = &1-x_3\\
+		x_2 & = &x_2\\
+		x_3 & = &x_3
+		\end{array}$$
+		Vemos entonces que 3 puntos arbitrarios pertenecienctes al plano son
+		$$P_1(1,0,0), \quad P_2(1,1,0), \quad P_3(0,0,1) $$
+		Luego, dos vectores directores que definen al plano son
+		$$\vec{d_1} = \vec{P_1P_2} = (0,1,0), \quad =\vec{d_2} = \vec{P_1P_3} = (-1,0,1)$$
+		Con esto, podemos expresar el plano en su forma vectorial
+		$$\vec{P}= \vec{P_1} + \alpha \vec{d_1}  + \beta \vec{d_2}$$
+		Para encontrar la imagen del plano por $T$, basta con hacer
+		$$T\vec{P}= T\vec{P_1} + \alpha T\vec{d_1}  + \beta T\vec{d_2}$$
+		Como
+		$$T\vec{P_1} = \begin{bmatrix}
+		1 & 2 & -1\\
+		2 & 4 & -2
+		\end{bmatrix} \begin{bmatrix}
+		1 \\ 0 \\ 0
+		\end{bmatrix} = \begin{bmatrix}
+		1 \\ 2
+		\end{bmatrix}$$
+		$$T\vec{d_1} = \begin{bmatrix}
+		1 & 2 & -1\\
+		2 & 4 & -2
+		\end{bmatrix} \begin{bmatrix}
+		0 \\ 1 \\ 0
+		\end{bmatrix} = \begin{bmatrix}
+		2 \\ 4
+		\end{bmatrix}$$
+		$$T\vec{d_2} = \begin{bmatrix}
+		1 & 2 & -1\\
+		2 & 4 & -2
+		\end{bmatrix} \begin{bmatrix}
+		-1 \\ 0 \\ 1
+		\end{bmatrix} = \begin{bmatrix}
+		-2 \\ -4
+		\end{bmatrix}$$
+		Tenemos que
+		$$TP =  \begin{bmatrix}
+		1 \\ 2
+		\end{bmatrix} + \alpha  \begin{bmatrix}
+		2 \\ 4
+		\end{bmatrix} + 
+		\beta  \begin{bmatrix}
+		-2 \\ -4
+		\end{bmatrix} =  \begin{bmatrix}
+		1 + 2\alpha  - 2\beta \\
+		2 + 4\alpha - 5\beta
+		\end{bmatrix} = 
+		(1+2\alpha - 2\beta)  \begin{bmatrix}
+		1 \\ 2
+		\end{bmatrix}$$
+		En otras palabras, la imagen del plano por la traslación $T$ corresponde a los ponderados de $\begin{bmatrix}
+			1 \\ 2
+		\end{bmatrix}$, es decir
+		$$T\vec{P} = Gen\left\{ \begin{bmatrix}
+		1 \\ 2
+		\end{bmatrix} \right\}$$
+\end{solucion}
 \end{preguntas}
 \end{document}
