--- a/2019/1/MAT1203/3/enunciado.tex
+++ b/2019/1/MAT1203/3/enunciado.tex
@@ -108,5 +108,29 @@
 \end{center}
 
 \begin{preguntas}
+\item Sean $\{u, v, w\}$ un conjunto de vectores linealmente independientes. Demuestre que el conjunto $\{u+v, u+2w, v+3u+w\}$ es linealmente independiente.
+\item Sea $L: P_2(\R) \ra \R^2$ una transformación lineal tal que
+	$$L(1+x) = \begin{pmatrix}
+	1\\
+	1
+	\end{pmatrix}, \quad L(1+x+x^2) = \begin{pmatrix}
+	1\\
+	-1
+	\end{pmatrix}\ y \ L(1+2x) = \begin{pmatrix}
+	1\\
+	2
+	\end{pmatrix}$$
+	determine $L(a+bx+cx^2)$ para todo $a,b,c \in \R$.
+\item Sea $T$ una transformación lineal tal que
+	$$T\begin{bmatrix}2 \\ 1\end{bmatrix} = \begin{bmatrix}1 \\ 0 \\ 1 \\ 0\end{bmatrix} 
+	\quad y \quad
+	T \begin{bmatrix}3 \\ 1\end{bmatrix}  =\begin{bmatrix}0 \\ 1 \\ 0 \\ 1\end{bmatrix}$$
+	Determine la matriz que representa a $T$
+\item Sea la transformación lineal $T$, dada por la matriz
+	$$T = \begin{bmatrix}
+	1 & 2 & -1\\
+	2 & 4 & -2
+	\end{bmatrix}$$
+	Determine la imagen del plano de ecuación $x_1 + x_3 = 1$ por T.
 \end{preguntas}
 \end{document}
