Solución de 2019/1/MAT1610/3

--- a/2019/1/MAT1610/3/solucion.tex
+++ b/2019/1/MAT1610/3/solucion.tex
@@ -217,13 +217,14 @@ Notemos que $f(1) = \alpha + \beta = 2$\\
 La otra condición para que sea derivable, es que exista derivada en $x=1$, es decir, debe existir
 $$\lim\limits_{h\ra 0} \dfrac{f(1+h) - f(1)}{h}$$
 Observe que
-\small$$\lim\limits_{h\ra 0+} \dfrac{f(1+h) - f(1)}{h} = 
+$$\lim\limits_{h\ra 0+} \dfrac{f(1+h) - f(1)}{h} = 
 \lim\limits_{h\ra 0+} \dfrac{\frac{1-(1+h)}{1-\sqrt[]{1+h}}- 2}{h} = 
-\lim\limits_{h\ra 0+} \dfrac{\frac{-h(1+\sqrt[]{1+h})}{1-(1+h)}- 2}{h} = 
-\lim\limits_{h\ra 0+} \dfrac{\frac{-h(1+\sqrt[]{1-h})}{-h}- 2}{h}  $$
-$$= 
+\lim\limits_{h\ra 0+} \dfrac{\frac{-h(1+\sqrt[]{1+h})}{1-(1+h)}- 2}{h}  $$
+$$ = 
+\lim\limits_{h\ra 0+} \dfrac{\frac{-h(1+\sqrt[]{1-h})}{-h}- 2}{h}= 
 \lim\limits_{h\ra 0+} \dfrac{\sqrt[]{1-h} - 1}{h} = 
-\lim\limits_{h\ra 0+} \dfrac{1-h - 1}{h(1+\sqrt[]{1-h})} = 
+\lim\limits_{h\ra 0+} \dfrac{1-h - 1}{h(1+\sqrt[]{1-h})}$$
+$$ = 
 \lim\limits_{h\ra 0+} \dfrac{-h}{h(1+\sqrt[]{1-h})} =
 \dfrac{1}{2}$$
 Por otra parte
