Solución de 2019/1/MAT1610/3

--- a/2019/1/MAT1610/3/solucion.tex
+++ b/2019/1/MAT1610/3/solucion.tex
@@ -169,7 +169,7 @@ Recordemos que
 \item $$f'(x) = \lim\limits_{h \ra 0} \dfrac{(x+h+5) - (x+5)}{h} =
  \lim\limits_{h \ra 0} \dfrac{x+h+5 -x-5}{h} =
  \lim\limits_{h \ra 0} \dfrac{h}{h} = 1$$
-\item \small$$f'(x) = \lim\limits_{h \ra 0} \dfrac{(2(x+h)^2-3) - (2x^2-3)}{h} =
+\item $$f'(x) = \lim\limits_{h \ra 0} \dfrac{(2(x+h)^2-3) - (2x^2-3)}{h} =
 \lim\limits_{h \ra 0} \dfrac{2(x^2+2xh+h^2)-3-2x^2+3}{h}$$
 $$=
 \lim\limits_{h \ra 0} \dfrac{2x^2+4xh+2h^2 - 3 -2x^2+3}{h} =
