Enunciado de 2018/1/MAT1203/4

--- a/2018/1/MAT1203/4/enunciado.tex
+++ b/2018/1/MAT1203/4/enunciado.tex
@@ -119,5 +119,18 @@
 	2 & 4 & -2
 	\end{bmatrix}$$
 	Determine la imagen del plano de ecuación $x_1 + x_3 = 1$ por T.
+\item Determine si las siguientes afirmaciones son verdaderas o falsas.
+\begin{enumerate}[a)]
+\item Para todo $u, v \in \R^n$ se tiene que $||u+v|| < ||u||+||v||$
+\item Si $u \in Gen\{v_1, v_2\}$ entonces $Gen\{u, v_1\} \subset Gen\{u, v_2\}$
+\item Sea $A$ una matriz de $n \times m$ tal que $n < m $, entonces las columnas de A son L.D.
+\item Si $A$ es una matriz de $2 \times 3$ tal que $Ax = \begin{pmatrix}
+		1\\
+		1
+		\end{pmatrix}$ y $ Ax = \begin{pmatrix}
+		1\\
+		2
+		\end{pmatrix}$ tienen solución, entonces las filas de $A$ son L.I.
+\end{enumerate}
 \end{preguntas}
 \end{document}
