Enunciado de 2019/1/MAT1610/4

--- a/2019/1/MAT1610/4/enunciado.tex
+++ b/2019/1/MAT1610/4/enunciado.tex
@@ -108,5 +108,12 @@
 \end{center}
 
 \begin{preguntas}
+\item Dado $f(x)$, determinar $f'(x)$
+\begin{tasks}(2)
+\task $f(x) = \sin x(x^4+\cot x)$
+\task $f(x) = \cos ^2 (x^3) \sin(x^2)\csc(x)$
+\task $f(x) = e^{3x} + ln(3(x+1)^5)$
+\task $f(x) = 5^x cos(3x)$
+\end{tasks}
 \end{preguntas}
 \end{document}
