Enunciado de 2019/1/MAT1610/4

--- a/2019/1/MAT1610/4/enunciado.tex
+++ b/2019/1/MAT1610/4/enunciado.tex
@@ -115,5 +115,7 @@
 \task $f(x) = e^{3x} + ln(3(x+1)^5)$
 \task $f(x) = 5^x cos(3x)$
 \end{tasks}
+\item Sea $f(x)$ una función derivable cuyo gráfico pasa por el punto $(1,1)$ tal que $f'(1) = -2$.\\
+Si $g(x) = \dfrac{1}{x^2(f(x))^5)}$, calcule $g'(1)$.
 \end{preguntas}
 \end{document}
