Solución de 2019/1/MAT1610/4

--- a/2019/1/MAT1610/4/solucion.tex
+++ b/2019/1/MAT1610/4/solucion.tex
@@ -124,5 +124,10 @@
 \item 
 \end{enumerate}
 \end{solucion}
+\item Sea $f(x)$ una función derivable cuyo gráfico pasa por el punto $(1,1)$ tal que $f'(1) = -2$.\\
+Si $g(x) = \dfrac{1}{x^2(f(x))^5)}$, calcule $g'(1)$.
+\begin{solucion}
+
+\end{solucion}
 \end{preguntas}
 \end{document}
