Enunciado de 2019/1/MAT1610/4

--- a/2019/1/MAT1610/4/enunciado.tex
+++ b/2019/1/MAT1610/4/enunciado.tex
@@ -117,5 +117,6 @@
 \end{tasks}
 \item Sea $f(x)$ una función derivable cuyo gráfico pasa por el punto $(1,1)$ tal que $f'(1) = -2$.\\
 Si $g(x) = \dfrac{1}{x^2(f(x))^5)}$, calcule $g'(1)$.
+\item Si $h(x) = f(x\ f(x))$, donde $f(1)=2$, $f'(1)=4$ y $f'(2) = 5$, encuentre $h'(1)$.
 \end{preguntas}
 \end{document}
