Solución de 2019/1/MAT1610/4

--- a/2019/1/MAT1610/4/solucion.tex
+++ b/2019/1/MAT1610/4/solucion.tex
@@ -129,5 +129,9 @@ Si $g(x) = \dfrac{1}{x^2(f(x))^5)}$, calcule $g'(1)$.
 \begin{solucion}
 
 \end{solucion}
+\item Si $h(x) = f(x\ f(x))$, donde $f(1)=2$, $f'(1)=4$ y $f'(2) = 5$, encuentre $h'(1)$.
+\begin{solucion}
+
+\end{solucion}
 \end{preguntas}
 \end{document}
