--- a/2019/1/MAT1610/4/solucion.tex
+++ b/2019/1/MAT1610/4/solucion.tex
@@ -108,6 +108,22 @@
 \end{center}
 
 \begin{preguntas}
+\item Calcule la derivada de las siguientes funciones
+\begin{tasks}(2)
+\task $f(x) = x^4 + 6e^x + 2\cos x$
+\task $f(x) = \dfrac{3x^3}{\sin x}$
+\task $f(x) = 3ln(x)\tan x$
+\task $f(x) = \arcsin x + \dfrac{e^x}{x}$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item 
+\item 
+\item 
+\item 
+\end{enumerate}
+\end{solucion}
 \item Dado $f(x)$, determinar $f'(x)$
 \begin{tasks}(2)
 \task $f(x) = \sin x(x^4+\cot x)$
