--- a/2019/1/MAT1610/4/solucion.tex
+++ b/2019/1/MAT1610/4/solucion.tex
@@ -141,11 +141,15 @@
 \end{enumerate}
 \end{solucion}
 \item Sea $f(x)$ una función derivable cuyo gráfico pasa por el punto $(1,1)$ tal que $f'(1) = -2$.\\
-Si $g(x) = \dfrac{1}{x^2(f(x))^5)}$, calcule $g'(1)$.
+Si 
+$$g(x) = \dfrac{1}{x^2(f(x))^5)}$$
+Calcule $g'(1)$.
 \begin{solucion}
 
 \end{solucion}
-\item Si $h(x) = f(x\ f(x))$, donde $f(1)=2$, $f'(1)=4$ y $f'(2) = 5$, encuentre $h'(1)$.
+\item Si 
+$$h(x) = f(x\ f(x))$$
+donde $f(1)=2$, $f'(1)=4$ y $f'(2) = 5$, encuentre $h'(1)$.
 \begin{solucion}
 
 \end{solucion}
