Enunciado de 2018/1/MAT1203/5

--- a/2018/1/MAT1203/5/enunciado.tex
+++ b/2018/1/MAT1203/5/enunciado.tex
@@ -108,5 +108,21 @@
 \end{center}
 
 \begin{preguntas}
+\item Sea
+	$$A = \begin{bmatrix}
+	1 & 0 & 6\\
+	-1 & 2 & 0\\
+	0 & 5 & -1
+	\end{bmatrix}$$
+	Escriba $A$ como un producto de matrices elementales
+\item Determinar las condiciones en $a$ para que la matriz
+	$$A = \begin{bmatrix}
+	a & 2a & 0 & 0 \\
+	0 & 1 & 0 & 3a-1\\
+	0 & 1 & a-1 & 2a-1\\
+	a & 2a & 0 & a
+	\end{bmatrix}$$
+	tenga solución única
+\item Demuestre que el conjunto $\{u, v, w\}$ es L.I. si y solo si el conjunto $\{u+v, u+w, v+w\}$ es L.I.
 \end{preguntas}
 \end{document}
