--- a/2018/1/MAT1203/5/solucion.tex
+++ b/2018/1/MAT1203/5/solucion.tex
@@ -108,5 +108,217 @@
 \end{center}
 
 \begin{preguntas}
+\item Sea
+	$$A = \begin{bmatrix}
+	1 & 0 & 6\\
+	-1 & 2 & 0\\
+	0 & 5 & -1
+	\end{bmatrix}$$
+	Escriba $A$ como un producto de matrices elementales
+\begin{solucion}
+Para esto, escalonamos la matriz $A$ hasta reducirla a la matriz identidad. Es importante que hagamos esto paso por paso, sin realizar mas de una operación por fila a la vez.
+		$$\begin{bmatrix}
+		1 & 0 & 6\\
+		-1 & 2 & 0\\
+		0 & 5 & -1
+		\end{bmatrix} \widesim{F_2+F_1}
+		\begin{bmatrix}
+		1 & 0 & 6\\
+		0 & 2 & 6\\
+		0 & 5 & -1
+		\end{bmatrix} \widesim{F_3-\frac{5}{2}F_2}
+		\begin{bmatrix}
+		1 & 0 & 6\\
+		0 & 2 & 6\\
+		0 & 0 & -16
+		\end{bmatrix} \widesim{F_3 \leftarrow -\frac{1}{16}F_3}
+		\begin{bmatrix}
+		1 & 0 & 6\\
+		0 & 2 & 6\\
+		0 & 0 & 1
+		\end{bmatrix}$$
+		$$\widesim{F_2 \leftarrow \frac{1}{2}F_2}
+		\begin{bmatrix}
+		1 & 0 & 6\\
+		0 & 1 & 3\\
+		0 & 0 & 1
+		\end{bmatrix} \widesim{F_2 - 3F_3}
+		\begin{bmatrix}
+		1 & 0 & 6\\
+		0 & 1 & 0\\
+		0 & 0 & 1
+		\end{bmatrix} \widesim{F_1 - 6F_3}
+		\begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & 0\\
+		0 & 0 & 1
+		\end{bmatrix}$$
+		Notemos que todas estas operaciones las podemos escribir como matrices elementales, aplicando la operación a la matriz identidad Sean
+		$$E_1 = \begin{bmatrix}
+		1 & 0 & 0\\
+		1 & 1 & 0\\
+		0 & 0 & 1
+		\end{bmatrix}, \quad E_2 = \begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & 0\\
+		0 & -\frac{5}{2} & 1
+		\end{bmatrix}, E_3 = \begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & 0\\
+		0 & 0 & -\frac{1}{16}
+		\end{bmatrix}$$
+		$$E_4 = \begin{bmatrix}
+		1 & 0 & 0\\
+		0 & \frac{1}{2} & 0\\
+		0 & 0 & 1
+		\end{bmatrix}, \quad E_5 = \begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & -3\\
+		0 & 0 & 1
+		\end{bmatrix}, E_6 = \begin{bmatrix}
+		1 & 0 & -6\\
+		0 & 1 & 0\\
+		0 & 0 & 1
+		\end{bmatrix}$$
+		tenemos que
+		$$E_6E_5E_4E_3E_2E_1A = I$$
+		por lo que
+		$$A = E_1^{-1}E_2^{-1}E_3^{-1}E_4^{-1}E_5^{-1}E_6^{-1}$$
+		donde
+		$$E_1^{-1} = \begin{bmatrix}
+		1 & 0 & 0\\
+		-1 & 1 & 0\\
+		0 & 0 & 1
+		\end{bmatrix}, \quad E_2^{-1} = \begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & 0\\
+		0 & \frac{5}{2} & 1
+		\end{bmatrix}, E_3^{-1} = \begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & 0\\
+		0 & 0 & -16
+		\end{bmatrix}$$
+		$$E_4^{-1} = \begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 2 & 0\\
+		0 & 0 & 1
+		\end{bmatrix}, \quad E_5^{-1} = \begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & 3\\
+		0 & 0 & 1
+		\end{bmatrix}, E_6^{-1} = \begin{bmatrix}
+		1 & 0 & 6\\
+		0 & 1 & 0\\
+		0 & 0 & 1
+		\end{bmatrix}$$
+		Finalmente,
+		$$A = \begin{bmatrix}
+		1 & 0 & 0\\
+		-1 & 1 & 0\\
+		0 & 0 & 1
+		\end{bmatrix}\begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & 0\\
+		0 & \frac{5}{2} & 1
+		\end{bmatrix}\begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & 0\\
+		0 & 0 & \frac{1}{16}
+		\end{bmatrix}\begin{bmatrix}
+		1 & 0 & 0\\
+		0 & -\frac{1}{2} & 0\\
+		0 & 0 & 1
+		\end{bmatrix}\begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & 3\\
+		0 & 0 & 1
+		\end{bmatrix}\begin{bmatrix}
+		1 & 0 & 6\\
+		0 & 1 & 0\\
+		0 & 0 & 1
+		\end{bmatrix}$$
+\end{solucion}
+\item Determinar las condiciones en $a$ para que la matriz
+	$$A = \begin{bmatrix}
+	a & 2a & 0 & 0 \\
+	0 & 1 & 0 & 3a-1\\
+	0 & 1 & a-1 & 2a-1\\
+	a & 2a & 0 & a
+	\end{bmatrix}$$
+	tenga solución única
+\begin{solucion}
+En primer lugar, debemos pivotear $A$ para dejarla en su forma escalonada:
+		$$\begin{bmatrix}
+		a & 2a & 0 & 0 \\
+		0 & 1 & 0 & 3a-1\\
+		0 & 1 & a-1 & 2a-1\\
+		a & 2a & 0 & a
+		\end{bmatrix} \widesim{F_4-F_1}
+		\begin{bmatrix}
+		a & 2a & 0 & 0 \\
+		0 & 1 & 0 & 3a-1\\
+		0 & 1 & a-1 & 2a-1\\
+		0 & 0 & 0 & a
+		\end{bmatrix} \widesim{F_3-F_2}
+		\begin{bmatrix}
+		a & 2a & 0 & 0 \\
+		0 & 1 & 0 & 3a-1\\
+		0 & 0 & a-1 & -a\\
+		0 & 0 & 0 & a
+		\end{bmatrix}$$
+		Notemos que la última fila nos puede dar problemas. Si $a=0$, el sistema va a tener solo 3 pivotes por lo que, en caso de ser consistente, tendría infinitas soluciones. Dicho esto, una restricción es $a\neq 0$
+		
+		En la tercera fila, debemos fijarnos que $a-1 \neq 0$, ya que de lo contrario, esta fila sería un múltiplo de la cuarta fila, por lo que habrían 3 pivotes y tendríamos soluciones infinitas. Dicho esto, tenemos que $a \neq 1$.
+		
+		De esta forma, el sistema siempre tendrá 4 pivotes y por lo tanto, tendrá solución única.
+		
+		En resumen, las condiciones son
+		$$a \neq 0, \quad a \neq 1$$
+\end{solucion}
+\item Demuestre que el conjunto $\{u, v, w\}$ es L.I. si y solo si el conjunto $\{u+v, u+w, v+w\}$ es L.I.
+\begin{solucion}
+Como nos dicen si y solo si, debemos demostrar en ambas direcciones
+		$$(\Longrightarrow)$$
+		Digamos que $\{u, v, w\}$ es L.I.\\
+		\\
+		P.D. $\{u+v, u+w, v+w\}$ es L.I.\\
+		\\
+		Para que $\{u+v, u+w, v+w\}$ sea L.I., el sistema
+		$$\alpha (u+v) + \beta (u+w) + \gamma (v+w) = 0$$
+		debe tener solución única $\alpha = 0$, $\beta = 0$, $\gamma = 0$
+		Reordenando,
+		$$\alpha (u+v) + \beta (u+w) + \gamma (v+w) = 0$$
+		$$(\alpha + \beta) u + (\alpha + \gamma) v + (\beta + \gamma) w = 0$$
+		Como sabemos que el conjunto $\{u, v, w\}$ es L.I., entonces tenemos que
+		$$\begin{array}{rl}
+		\alpha + \beta & = 0\\
+		\alpha + \gamma & = 0\\
+		\beta + \gamma & = 0
+		\end{array}$$
+		Este sistema tiene por solución
+		$$\alpha = 0, \quad \beta = 0, \quad \gamma = 0$$
+		Con lo que demostramos que $\{u+v, u+w, v+w\}$ es L.I.
+		$$(\Longleftarrow)$$
+		Digamos que $\{u+v, u+w, v+w\}$ es L.I.\\
+		\\
+		P.D. $\{u, v, w\}$ es L.I.\\
+		\\
+		Para que $\{u, v, w\}$ sea L.I., el sistema
+		$$c_1u + c_2v + c_3w$$
+		debe tener solución única $c_1 = 0$, $c_2 = 0$, $c_3 = 0$\\
+		\\
+		Como $\{u+v, u+w, v+w\}$ es L.I., sabemos que el sistema
+		$$\alpha (u+v) + \beta (u+w) + \gamma (v+w) = 0$$
+		tiene solución única $\alpha = 0$, $\beta = 0$, $\gamma = 0$
+		Reordenando,
+		$$\alpha (u+v) + \beta (u+w) + \gamma (v+w) = 0$$
+		$$(\alpha + \beta) u + (\alpha + \gamma) v + (\beta + \gamma) w = 0$$
+		Con lo que tenemos que
+		$$c_1 = \alpha + \beta = 0, \quad c_2 = \alpha + \gamma = 0, \quad c_3 = \beta + \gamma = 0$$
+		es la única solución del sistema. \\
+		\\
+		Luego, $\{u, v, w\}$ es L.I.
+		$$q.e.d$$
+\end{solucion}
 \end{preguntas}
 \end{document}
