--- a/2019/1/MAT1610/4/solucion.tex
+++ b/2019/1/MAT1610/4/solucion.tex
@@ -118,10 +118,10 @@
 \begin{solucion}
 
 \begin{enumerate}[a)]
-\item 
-\item 
-\item 
-\item 
+\item $f'(x) = 4x^3 + 6e^x - 2\sin x$
+\item $f'(x) = \dfrac{9x^2\sin x - 3x^3\cos x}{\sin^2 x}$
+\item $f'(x) = 3\dfrac{1}{x}\tan x + 3ln(x) \sec^2 x = \dfrac{3 \tan x}{x} + 3ln(x) \sec^2 x$
+\item $f'(x) = \dfrac{1}{\sqrt[]{1-x^2}} + \dfrac{xe^x-e^x}{x^2}$
 \end{enumerate}
 \end{solucion}
 \item Dado $f(x)$, determinar $f'(x)$
@@ -134,20 +134,71 @@
 \begin{solucion}
 
 \begin{enumerate}[a)]
-\item 
-\item 
-\item 
-\item 
+\item $$\begin{array}{rcl}
+	f(x) & = & \sin x(x^4+\cot x) \\
+	f'(x) & = & (\sin x(x^4+\cot x))' \\
+	f'(x) & = & (\sin x)'(x^4+\cot x) + \sin x(x^4+\cot x)' \\
+	f'(x) & = & \cos x(x^4+\cot x) + \sin x(4x^3-\csc^2 x)
+	\end{array}$$
+\item {\scriptsize$$\begin{array}{rcl}
+	f(x) & = & \cos ^2 (x^3) \sin(x^2)\csc(x) \\
+	f'(x) & = & (\cos ^2 (x^3) (\sin(x^2)\csc(x)))' \\
+	f'(x) & = & \cos ^2 (x^3)' \sin(x^2)\csc(x) + \cos ^2 (x^3) (\sin(x^2)\csc(x))' \\
+	f'(x) & = & 2\cos (x^3)\cos (x^3)' \sin(x^2)\csc(x) + \cos ^2 (x^3) (\sin(x^2)'\csc(x) + \sin(x^2)\csc(x)') \\
+	f'(x) & = & 2\cos (x^3)\cos (x^3)' \sin(x^2)\csc(x) + \cos ^2 (x^3) (\sin(x^2)'\csc(x) + \sin(x^2)\csc(x)') \\
+	f'(x) & = & 2\cos (x^3)(-\sin (x^3))3x^2 \sin(x^2)\csc(x) + \cos ^2 (x^3) (\cos(x^2)2x\csc(x) + \sin(x^2)(-\cot x\csc x)) \\
+	f'(x) & = & -2\sin (2x^3)3x^2 \sin(x^2)\csc(x) + \cos ^2 (x^3) (\cos(x^2)2x\csc(x) - \sin(x^2)\cot x\csc x)
+	\end{array}$$}
+\item $$\begin{array}{rcl}
+	f(x) & = & e^{3x} + ln(3(x+1)^5) \\
+	f'(x) & = & (e^{3x} + ln(3(x+1)^5))' \\
+	f'(x) & = & (e^{3x})' + ln(3(x+1)^5)' \\
+	f'(x) & = & 3e^{3x} + \dfrac{1}{3(x+1)^5}(3(x+1)^5)' \\
+	f'(x) & = & 3e^{3x} + \dfrac{1}{3(x+1)^5}15(x+1)^4(x+1)' \\
+	f'(x) & = & 3e^{3x} + \dfrac{5(x+1)^4}{(x+1)^5} \\
+	f'(x) & = & 3e^{3x} + \dfrac{5}{x+1}
+	\end{array}$$
+\item $$\begin{array}{rcl}
+	f(x) & = & 5^x cos(3x) \\
+	f'(x) & = & (5^x cos(3x))' \\
+	f'(x) & = & (5^x)' cos(3x) + 5^x cos(3x)' \\
+	f'(x) & = & 5^x ln(5) cos(3x) + 5^x (-\sin 3x)3 \\
+	f'(x) & = & ln(5)5^x cos(3x) - 3\cdot 5^x \sin 3x
+	\end{array}$$
 \end{enumerate}
 \end{solucion}
 \item Sea $f(x)$ una función derivable cuyo gráfico pasa por el punto $(1,1)$ tal que $f'(1) = -2$.\\
-Si $g(x) = \dfrac{1}{x^2(f(x))^5)}$, calcule $g'(1)$.
+Si $g(x) = \dfrac{1}{x^2(f(x))^5}$, calcule $g'(1)$.
 \begin{solucion}
+Del enunciado sabemos que
+$$f(1) = 1, \qquad f'(1) = -2$$
+Por la regla de la cadena, tenemos que
+$$\begin{array}{rcl}
+g'(x) & = & \dfrac{-1}{(x^2(f(x))^5)^2}(x^2(f(x))^5)'\\
+& = & \dfrac{-1}{x^4(f(x))^{10}}(2x(f(x))^5 + 5(f(x))^4f'(x)x^2)\\
+& = & \dfrac{-2x(f(x))^5 - 5(f(x))^4f'(x)x^2}{x^4(f(x))^{10}}
+\end{array}$$
+Luego, reemplazando con $x=1$, obtenemos
 
+$$g'(1) =\dfrac{-2(f(1))^5 - 5(f(1))^4f'(1)}{(f(1))^{10}} = -2-5\cdot (-2) = 8$$
 \end{solucion}
 \item Si $h(x) = f(x\ f(x))$ donde $f(1)=2$, $f'(1)=4$ y $f'(2) = 5$, encuentre $h'(1)$.
 \begin{solucion}
-
+Por la regla de la cadena, tenemos que
+$$h'(x) = f'(x\ f(x)) (x\ f(x))' = f'(x\ f(x))(f(x) + xf'(x))$$
+Luego, reemplazando en $x=1$, tenemos que
+$$h'(x) = f'(f(1))(f(1) + f'(1))$$
+Finalmente, reemplazando con la información del enunciado,
+$$h'(x) = f'(2)(2+4) = 5\cdot 6 = 30$$
+\end{solucion}
+\item Si $h(x) = f(x\ f(x))$ donde $f(1)=2$, $f'(1)=4$ y $f'(2) = 5$, encuentre $h'(1)$.
+\begin{solucion}
+Por la regla de la cadena, tenemos que
+$$h'(x) = f'(x\ f(x)) (x\ f(x))' = f'(x\ f(x))(f(x) + xf'(x))$$
+Luego, reemplazando en $x=1$, tenemos que
+$$h'(x) = f'(f(1))(f(1) + f'(1))$$
+Finalmente, reemplazando con la información del enunciado,
+$$h'(x) = f'(2)(2+4) = 5\cdot 6 = 30$$
 \end{solucion}
 \end{preguntas}
 \end{document}
