--- a/2019/1/MAT1203/4/enunciado.tex
+++ b/2019/1/MAT1203/4/enunciado.tex
@@ -108,5 +108,13 @@
 \end{center}
 
 \begin{preguntas}
+\item Sea
+	$$A = \begin{bmatrix}
+	1 & 0 & 6\\
+	-1 & 2 & 0\\
+	0 & 5 & -1
+	\end{bmatrix}$$
+	Escriba $A$ como un producto de matrices elementales
+\item Sea $A$ una matriz de $n\times m$ con columnas LI. Demuestre que si $P=A(A^tA)^{-1}A^{t}$, entonces $P^2=P$ y $P=P^t$.
 \end{preguntas}
 \end{document}
