--- a/2019/1/MAT1203/4/solucion.tex
+++ b/2019/1/MAT1203/4/solucion.tex
@@ -108,5 +108,139 @@
 \end{center}
 
 \begin{preguntas}
+\item Sea
+	$$A = \begin{bmatrix}
+	1 & 0 & 6\\
+	-1 & 2 & 0\\
+	0 & 5 & -1
+	\end{bmatrix}$$
+	Escriba $A$ como un producto de matrices elementales
+\begin{solucion}
+Para esto, escalonamos la matriz $A$ hasta reducirla a la matriz identidad. Es importante que hagamos esto paso por paso, sin realizar mas de una operación por fila a la vez.
+		$$\begin{bmatrix}
+		1 & 0 & 6\\
+		-1 & 2 & 0\\
+		0 & 5 & -1
+		\end{bmatrix} \widesim{F_2+F_1}
+		\begin{bmatrix}
+		1 & 0 & 6\\
+		0 & 2 & 6\\
+		0 & 5 & -1
+		\end{bmatrix} \widesim{F_3-\frac{5}{2}F_2}
+		\begin{bmatrix}
+		1 & 0 & 6\\
+		0 & 2 & 6\\
+		0 & 0 & -16
+		\end{bmatrix} \widesim{F_3 \leftarrow -\frac{1}{16}F_3}
+		\begin{bmatrix}
+		1 & 0 & 6\\
+		0 & 2 & 6\\
+		0 & 0 & 1
+		\end{bmatrix}$$
+		$$\widesim{F_2 \leftarrow \frac{1}{2}F_2}
+		\begin{bmatrix}
+		1 & 0 & 6\\
+		0 & 1 & 3\\
+		0 & 0 & 1
+		\end{bmatrix} \widesim{F_2 - 3F_3}
+		\begin{bmatrix}
+		1 & 0 & 6\\
+		0 & 1 & 0\\
+		0 & 0 & 1
+		\end{bmatrix} \widesim{F_1 - 6F_3}
+		\begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & 0\\
+		0 & 0 & 1
+		\end{bmatrix}$$
+		Notemos que todas estas operaciones las podemos escribir como matrices elementales, aplicando la operación a la matriz identidad Sean
+		$$E_1 = \begin{bmatrix}
+		1 & 0 & 0\\
+		1 & 1 & 0\\
+		0 & 0 & 1
+		\end{bmatrix}, \quad E_2 = \begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & 0\\
+		0 & -\frac{5}{2} & 1
+		\end{bmatrix}, E_3 = \begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & 0\\
+		0 & 0 & -\frac{1}{16}
+		\end{bmatrix}$$
+		$$E_4 = \begin{bmatrix}
+		1 & 0 & 0\\
+		0 & \frac{1}{2} & 0\\
+		0 & 0 & 1
+		\end{bmatrix}, \quad E_5 = \begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & -3\\
+		0 & 0 & 1
+		\end{bmatrix}, E_6 = \begin{bmatrix}
+		1 & 0 & -6\\
+		0 & 1 & 0\\
+		0 & 0 & 1
+		\end{bmatrix}$$
+		tenemos que
+		$$E_6E_5E_4E_3E_2E_1A = I$$
+		por lo que
+		$$A = E_1^{-1}E_2^{-1}E_3^{-1}E_4^{-1}E_5^{-1}E_6^{-1}$$
+		donde
+		$$E_1^{-1} = \begin{bmatrix}
+		1 & 0 & 0\\
+		-1 & 1 & 0\\
+		0 & 0 & 1
+		\end{bmatrix}, \quad E_2^{-1} = \begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & 0\\
+		0 & \frac{5}{2} & 1
+		\end{bmatrix}, E_3^{-1} = \begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & 0\\
+		0 & 0 & -16
+		\end{bmatrix}$$
+		$$E_4^{-1} = \begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 2 & 0\\
+		0 & 0 & 1
+		\end{bmatrix}, \quad E_5^{-1} = \begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & 3\\
+		0 & 0 & 1
+		\end{bmatrix}, E_6^{-1} = \begin{bmatrix}
+		1 & 0 & 6\\
+		0 & 1 & 0\\
+		0 & 0 & 1
+		\end{bmatrix}$$
+		Finalmente,
+		$$A = \begin{bmatrix}
+		1 & 0 & 0\\
+		-1 & 1 & 0\\
+		0 & 0 & 1
+		\end{bmatrix}\begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & 0\\
+		0 & \frac{5}{2} & 1
+		\end{bmatrix}\begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & 0\\
+		0 & 0 & \frac{1}{16}
+		\end{bmatrix}\begin{bmatrix}
+		1 & 0 & 0\\
+		0 & -\frac{1}{2} & 0\\
+		0 & 0 & 1
+		\end{bmatrix}\begin{bmatrix}
+		1 & 0 & 0\\
+		0 & 1 & 3\\
+		0 & 0 & 1
+		\end{bmatrix}\begin{bmatrix}
+		1 & 0 & 6\\
+		0 & 1 & 0\\
+		0 & 0 & 1
+		\end{bmatrix}$$
+\end{solucion}
+\item Sea $A$ una matriz de $n\times m$ con columnas LI. Demuestre que si $P=A(A^tA)^{-1}A^{t}$, entonces $P^2=P$ y $P=P^t$.
+\begin{solucion}
+
+\end{solucion}
 \end{preguntas}
 \end{document}
