--- a/2019/1/MAT1203/4/enunciado.tex
+++ b/2019/1/MAT1203/4/enunciado.tex
@@ -115,6 +115,15 @@
 	0 & 5 & -1
 	\end{bmatrix}$$
 	Escriba $A$ como un producto de matrices elementales
+\item Determinar la matriz inversa de
+$$A = \begin{bmatrix}
+1 & -1 & 0 \\
+0 & 1 & 0 \\
+2 & 0 & 1
+\end{bmatrix}$$
+\begin{enumerate}[a)]
+\item 
+\end{enumerate}
 \item Sea $A$ una matriz de $n\times m$ con columnas LI. Demuestre que si $P=A(A^tA)^{-1}A^{t}$, entonces $P^2=P$ y $P=P^t$.
 \end{preguntas}
 \end{document}
