Solución de 2019/1/MAT1203/4

--- a/2019/1/MAT1203/4/solucion.tex
+++ b/2019/1/MAT1203/4/solucion.tex
@@ -238,6 +238,21 @@ Para esto, escalonamos la matriz $A$ hasta reducirla a la matriz identidad. Es i
 		0 & 0 & 1
 		\end{bmatrix}$$
 \end{solucion}
+\item Determinar la matriz inversa de
+$$A = \begin{bmatrix}
+1 & -1 & 0 \\
+0 & 1 & 0 \\
+2 & 0 & 1
+\end{bmatrix}$$
+\begin{enumerate}[a)]
+\item 
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item 
+\end{enumerate}
+\end{solucion}
 \item Sea $A$ una matriz de $n\times m$ con columnas LI. Demuestre que si $P=A(A^tA)^{-1}A^{t}$, entonces $P^2=P$ y $P=P^t$.
 \begin{solucion}
 
