Enunciado de 2019/1/MAT1203/4

--- a/2019/1/MAT1203/4/enunciado.tex
+++ b/2019/1/MAT1203/4/enunciado.tex
@@ -51,7 +51,7 @@
 }
 
 \newcommand{\ayudantia}{{\sc Ayudantía 4}}
-\newcommand{\tituloayu}{Matrices elementales e invertibles}
+\newcommand{\tituloayu}{Matrices inversas}
 \newcommand{\fecha}{3 de abril de 2019}
 \newcommand{\sigla}{MAT1203}
 \newcommand{\nombre}{Álgebra Lineal}
@@ -121,9 +121,23 @@ $$A = \begin{bmatrix}
 0 & 1 & 0 \\
 2 & 0 & 1
 \end{bmatrix}$$
+\item Sea $A$ una matriz de $n\times m$ con columnas LI. Demuestre que si $P=A(A^tA)^{-1}A^{t}$, entonces $P^2=P$ y $P=P^t$.
+\item Sea $A$ una matriz de $3\times 3$ tal que
+      $$A\left(\begin{array}{r}
+  1\\0\\1
+\end{array}\right)= \left(\begin{array}{r}
+  1\\0\\0
+\end{array}\right),\quad\quad A \left(\begin{array}{r}
+  1\\-2\\4
+\end{array}\right)= \left(\begin{array}{r}
+  1\\0\\1
+\end{array}\right), \qquad  A\left(\begin{array}{r}
+  -1\\1\\1
+\end{array}\right)= \left(\begin{array}{r}
+  0\\1\\1
+\end{array}\right).$$ Calcule $A^{-1}$.
 \begin{enumerate}[a)]
 \item 
 \end{enumerate}
-\item Sea $A$ una matriz de $n\times m$ con columnas LI. Demuestre que si $P=A(A^tA)^{-1}A^{t}$, entonces $P^2=P$ y $P=P^t$.
 \end{preguntas}
 \end{document}
