Solución de 2019/1/MAT1203/4

--- a/2019/1/MAT1203/4/solucion.tex
+++ b/2019/1/MAT1203/4/solucion.tex
@@ -265,14 +265,12 @@ $$A = \begin{bmatrix}
 \end{array}\right)= \left(\begin{array}{r}
   0\\1\\1
 \end{array}\right).$$ Calcule $A^{-1}$.
-\begin{enumerate}[a)]
-\item 
-\end{enumerate}
 \begin{solucion}
 
-\begin{enumerate}[a)]
-\item 
-\end{enumerate}
+\end{solucion}
+\item Demuestre que $T(x_1,x_2, x_3)=(x_1,x_1+x_2, x_1+x_2+x_3)$ es invertible y encuentre una f\'ormula para $T^{-1}$.
+\begin{solucion}
+
 \end{solucion}
 \end{preguntas}
 \end{document}
