--- a/2019/1/MAT1610/5/solucion.tex
+++ b/2019/1/MAT1610/5/solucion.tex
@@ -51,7 +51,7 @@
 }
 
 \newcommand{\ayudantia}{{\sc Ayudantía 5}}
-\newcommand{\tituloayu}{Derivadas implícitas y razón de cambio}
+\newcommand{\tituloayu}{Derivadas implícitas, derivación logarítmica, derivada de la inversa\\y razón de cambio relacionada}
 \newcommand{\fecha}{9 de abril de 2019}
 \newcommand{\sigla}{MAT1610}
 \newcommand{\nombre}{Cálculo I}
