--- a/2019/1/MAT1610/5/solucion.tex
+++ b/2019/1/MAT1610/5/solucion.tex
@@ -108,5 +108,29 @@
 \end{center}
 
 \begin{preguntas}
+\item Calcular $y'$
+\begin{enumerate}[a)]
+\item $x^2+y^2-7=0$
+\item $x^2y-xy^2+y^2=4$
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item 
+\item 
+\end{enumerate}
+\end{solucion}
+\item Sea
+$$e^xy+y^3 =xy^2+2$$
+Encuentre el valor de $y''$ cuando $(x,y)=(0,1)$
+\begin{enumerate}[a)]
+\item 
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item 
+\end{enumerate}
+\end{solucion}
 \end{preguntas}
 \end{document}
