--- a/2019/1/MAT1610/5/solucion.tex
+++ b/2019/1/MAT1610/5/solucion.tex
@@ -109,10 +109,10 @@
 
 \begin{preguntas}
 \item Calcular $y'$
-\begin{enumerate}[a)]
-\item $x^2+y^2-7=0$
-\item $x^2y-xy^2+y^2=4$
-\end{enumerate}
+\begin{tasks}(2)
+\task $x^2+y^2-7=0$
+\task $x^2y-xy^2+y^2=4$
+\end{tasks}
 \begin{solucion}
 
 \begin{enumerate}[a)]
@@ -129,6 +129,18 @@ Encuentre el valor de $y''$ cuando $(x,y)=(0,1)$
 \begin{solucion}
 
 \begin{enumerate}[a)]
+\item 
+\end{enumerate}
+\end{solucion}
+\item Encuentre las derivadas de las siguientes funciones
+\begin{tasks}(2)
+\task $f(x) = x^{\sin x}$
+\task $f(x) = (x^2+3)^{5x-1}$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item 
 \item 
 \end{enumerate}
 \end{solucion}
