Enunciado de 2019/1/MAT1610/5

--- a/2019/1/MAT1610/5/enunciado.tex
+++ b/2019/1/MAT1610/5/enunciado.tex
@@ -124,5 +124,7 @@ Encuentre el valor de $y''$ cuando $(x,y)=(0,1)$
 \task $f(x) = x^{\sin x}$
 \task $f(x) = (x^2+3)^{5x-1}$
 \end{tasks}
+\item Dada la función invertible $f(x) = x^3 + 3x + 6$, calcular $(f^{-1})'(6)$
+\item En un estanque de forma cónica, con radio basal 5 $m$ y altura 10 $m$, con el vértice hacia abajo, se hace entrar agua a razón de 9 $m^3/min$. ¿Cuán rápido varía el nivel del agua cuando esta tiene una profundidad de 6 metros?
 \end{preguntas}
 \end{document}
