--- a/2019/1/MAT1610/5/solucion.tex
+++ b/2019/1/MAT1610/5/solucion.tex
@@ -144,5 +144,13 @@ Encuentre el valor de $y''$ cuando $(x,y)=(0,1)$
 \item 
 \end{enumerate}
 \end{solucion}
+\item Dada la función invertible $f(x) = x^3 + 3x + 6$, calcular $(f^{-1})'(6)$
+\begin{solucion}
+
+\end{solucion}
+\item En un estanque de forma cónica, con radio basal 5 $m$ y altura 10 $m$, con el vértice hacia abajo, se hace entrar agua a razón de 9 $m^3/min$. ¿Cuán rápido varía el nivel del agua cuando esta tiene una profundidad de 6 metros?
+\begin{solucion}
+
+\end{solucion}
 \end{preguntas}
 \end{document}
