--- a/2019/1/MAT1610/5/enunciado.tex
+++ b/2019/1/MAT1610/5/enunciado.tex
@@ -125,6 +125,22 @@ Encuentre el valor de $y''$ cuando $(x,y)=(0,1)$
 \task $f(x) = (x^2+3)^{5x-1}$
 \end{tasks}
 \item Dada la función invertible $f(x) = x^3 + 3x + 6$, calcular $(f^{-1})'(6)$
+\item Sean $f$ y $g$ funciones derivables e invertibles. La tabla adjunta muestra los valores de $f$, $g$ y sus derivadas sobre algunos valores. Calcule $(f \circ f)'(3)$ y $(g^{-1} \circ f)'(2)$
+$$
+\begin{table}[]
+\begin{tabular}{|l|l|l|l|l|}
+\hline
+  & f & g & f' & g' \\ \hline
+1 & 3 & 2 & 4  & 1  \\ \hline
+2 & 1 & 3 & 3  & 2  \\ \hline
+3 & 2 & 4 & 2  & 4  \\ \hline
+4 & 4 & 1 & 1  & 2  \\ \hline
+\end{tabular}
+\end{table}
+$$
+\begin{enumerate}[a)]
+\item 
+\end{enumerate}
 \item En un estanque de forma cónica, con radio basal 5 $m$ y altura 10 $m$, con el vértice hacia abajo, se hace entrar agua a razón de 9 $m^3/min$. ¿Cuán rápido varía el nivel del agua cuando esta tiene una profundidad de 6 metros?
 \end{preguntas}
 \end{document}
