--- a/2019/1/MAT1610/5/solucion.tex
+++ b/2019/1/MAT1610/5/solucion.tex
@@ -148,6 +148,28 @@ Encuentre el valor de $y''$ cuando $(x,y)=(0,1)$
 \begin{solucion}
 
 \end{solucion}
+\item Sean $f$ y $g$ funciones derivables e invertibles. La tabla adjunta muestra los valores de $f$, $g$ y sus derivadas sobre algunos valores. Calcule $(f \circ f)'(3)$ y $(g^{-1} \circ f)'(2)$
+$$
+\begin{table}[]
+\begin{tabular}{|l|l|l|l|l|}
+\hline
+  & f & g & f' & g' \\ \hline
+1 & 3 & 2 & 4  & 1  \\ \hline
+2 & 1 & 3 & 3  & 2  \\ \hline
+3 & 2 & 4 & 2  & 4  \\ \hline
+4 & 4 & 1 & 1  & 2  \\ \hline
+\end{tabular}
+\end{table}
+$$
+\begin{enumerate}[a)]
+\item 
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item 
+\end{enumerate}
+\end{solucion}
 \item En un estanque de forma cónica, con radio basal 5 $m$ y altura 10 $m$, con el vértice hacia abajo, se hace entrar agua a razón de 9 $m^3/min$. ¿Cuán rápido varía el nivel del agua cuando esta tiene una profundidad de 6 metros?
 \begin{solucion}
 
